--- a/ch_01/exercises.ipynb
+++ b/ch_01/exercises.ipynb
@@ -20,7 +20,8 @@
     "import random\n",
     "\n",
     "random.seed(0)\n",
-    "salaries = [round(random.random()*1000000, -3) for _ in range(100)]"
+    "salaries = [round(random.random()*1000000, -3) for _ in range(100)]\n",
+    "print(salaries)"
    ]
   },
   {
@@ -36,7 +37,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total = 0\n",
+    "count = 0\n",
+    "\n",
+    "for i in salaries:\n",
+    "    total = total + i\n",
+    "    count = count + 1\n",
+    "mean = total/count\n",
+    "\n",
+    "print(f\"Mean {mean}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +61,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "salaries.sort()\n",
+    "\n",
+    "median_ind = int(count / 2)\n",
+    "\n",
+    "print(f\"Median = {salaries[median_ind]}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,7 +81,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "cnt = Counter(salaries)\n",
+    "for i in cnt:\n",
+    "    if cnt[i] > 1:\n",
+    "        print(f\"{i}  Value = {cnt[i]}\")\n",
+    "for mc in cnt.most_common(1):\n",
+    "    print(f\"Salay => {mc[0]} \\t Count => {mc[1]}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +106,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variance = 0\n",
+    "for i in range(0, len(salaries), 1):\n",
+    "    variance += (salaries[i]- mean) ** 2\n",
+    "variance = variance / (len(salaries)-1)\n",
+    "\n",
+    "print(f\"Standard variance = {variance}\")\n",
+    "\n",
+    "variance = sum([(value - sum(salaries) / len(salaries)) ** 2 for value in salaries]) / (len(salaries)-1)\n",
+    "\n",
+    "print(f\"Standard variance = {variance}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
