--- a/ch_01/exercises.ipynb
+++ b/ch_01/exercises.ipynb
@@ -132,7 +132,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "std_dev = math.sqrt(variance)\n",
+    "print(f\"Standard deviation => {std_dev}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +151,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f\"Range => {max(salaries) - min(salaries)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +168,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "print(f\"Coefficient of variation => {std_dev/mean}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,11 +181,35 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In general, to find the p quantile, you would arrange the observations in ascending order and use the formula for percentile location to calculate the position where the p quantile would be located. If the percentile location is a whole number, the p quantile is the value at that position in the ordered list of observations. If the percentile location is not a whole number, the p quantile is calculated on pro-rata basis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def quantile(x, pct):\n",
+    "    # x - sample list\n",
+    "    # pct - percentile\n",
+    "    x.sort()\n",
+    "    index = (len(x) + 1) * pct - 1\n",
+    "    if len(x) % 2:\n",
+    "        return x[int(index)]\n",
+    "    else:\n",
+    "        # odd, so grab the value at index\n",
+    "        return (x[math.floor(index)] + x[math.ceil(index)]) / 2\n",
+    "    \n",
+    "q1 = quantile(salaries,0.25)\n",
+    "q3 = quantile(salaries,0.75)\n",
+    "iqr = q3 - q1\n",
+    "print(f\"Interquartile range => {iqr}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +223,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q1 = quantile(salaries,0.25)\n",
+    "q3 = quantile(salaries,0.75)\n",
+    "qcd = (q3 - q1) / (q3 + q1)\n",
+    "print(f\"Quartile coefficient => {qcd}\") "
+   ]
   },
   {
    "cell_type": "markdown",
