--- a/ch_01/exercises.ipynb
+++ b/ch_01/exercises.ipynb
@@ -243,7 +243,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min, max = min(salaries), max(salaries)\n",
+    "range = max - min\n",
+    "min_max_scale = []\n",
+    "for x in salaries:\n",
+    "    min_max_scale.append((x - min) / range)\n",
+    "min_max_scale[:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,7 +264,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "std_scale = []\n",
+    "\n",
+    "for x in salaries:\n",
+    "    std_scale.append((x - mean) / std_dev)\n",
+    "std_scale[:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,11 +281,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Calculate the average value for each variable\n",
+    "Find the difference between each value and the mean for both variables\n",
+    "Multiply the values for the two variables\n",
+    "Add the values together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2644912991825042\n"
+     ]
+    }
+   ],
+   "source": [
+    "total1, total2 = 0, 0\n",
+    "norm_dif = []\n",
+    "std_dif = []\n",
+    "for x in min_max_scale:\n",
+    "    total1 = total1 + x\n",
+    "for y in std_scale:\n",
+    "    total2 = total2 + y\n",
+    "\n",
+    "norm_mean = total1 / len(min_max_scale)\n",
+    "std_mean = total2 / len(std_scale)\n",
+    "\n",
+    "n_total=0\n",
+    "for i, j in zip(min_max_scale, std_scale):\n",
+    "    n_total = n_total + (i - norm_mean) * (j -std_mean)\n",
+    "\n",
+    "\n",
+    "covriance = n_total / len(salaries)\n",
+    "print(covriance)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,10 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson correlation coefficient =>0.9900000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm_var = sum([(value - sum(min_max_scale) / len(min_max_scale)) ** 2 for value in min_max_scale]) / (len(min_max_scale)-1)\n",
+    "std_var = sum([(value - sum(std_scale) / len(std_scale)) ** 2 for value in std_scale]) / (len(std_scale)-1)\n",
+    "\n",
+    "norm_var_std_dev = math.sqrt(norm_var)\n",
+    "std_var_std_dev = math.sqrt(std_var)\n",
+    "\n",
+    "Pcc = covriance/(norm_var_std_dev*std_var_std_dev)\n",
+    "print(f\"Pearson correlation coefficient => {Pcc}\")"
+   ]
   },
   {
    "cell_type": "markdown",
